--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>HCI Project Portfolio</title>	
+	<title>QuizWhiz</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -10,54 +10,59 @@
 	<link href="css/introHCI.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->        
-</head>
+      <![endif]-->        
+  </head>
 
-<body>
-	<div class="container">
-		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
-		<!-- p means paragraph -->
-		<div class="jumbotron">
-			<h1>Welcome Student: Hunter!</h1>
-			<p>This is Math 10A</p>
-			<button id="testjs" class="btn btn-primary btn-lg">Log out</button>
-		</div>
+  <body>
+  	<div class="container">
+  		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
+  		<!-- p means paragraph -->
+  		<div class="jumbotron">
+  			<h1>Welcome Hunter!</h1>
+  			<h2>Student</h2>
 
-		<!--  this is friend section -->
-		<h4>Friends</h4>
+  			<button id="testjs" class="btn btn-primary btn-lg">Logout</button>
+  		</div>
 
-		<div class="Friends" id="project1">
-			<a href="" class="thumbnail">
-				<img src="" alt="Jason" class="img">
-				<img src="" alt="Luis" class="img">
-				<img src="" alt="Xiaoping" class="img">
-			</a>
-		</div>
+  		<!--  this is friend section -->
+  		<h4>Friends</h4>
 
-		<!--  this is topic section -->
-		<div class="TopicHeader">
-		<h4>Topic</h4>
-		</div>
+  		<div class="Friends" id="project1">
+  			<a href="" class="thumbnail">
+  				<img src="" alt="Jason" class="img">
+  				<img src="" alt="Luis" class="img">
+  				<img src="" alt="Xiaoping" class="img">
+  			</a>
+  		</div>
+
+  		<!--  this is topic section -->
+  		<div class="TopicHeader">
+  			<h4>Class/Subject</h4>
+  		</div>
 
 
-		<div class="Topic" id="project2">
-			<a href="" class="thumbnail">
-				<button id="submitBtn" type="button" class="btn btn-default">Math 10A</button>
-			</a>
-		</div>
-		
-	</div>
+  		<div class="Topic" id="project2">
+  			<a href="" class="thumbnail">
+  				<button id="courseBtn1" type="button" class="btn btn-default">MATH 10A</button> <br>
+  				<button id="courseBtn2" type="button" class="btn btn-default">BILD 1</button>
+  			</a>
+  		</div>
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/introHCI.js"></script>
 
-	<form id="projectForm" role="form">
+
+
+  	</div>
+
+  	<script src="https://code.jquery.com/jquery.js"></script>
+  	<script src="js/bootstrap.min.js"></script>
+  	<script src="js/introHCI.js"></script>
+
+  	<form id="projectForm" role="form">
     <!--<div class="form-group">
       <label for="project">Friend's name(last, first)</label>
       <select class="form-control" id="project">
@@ -65,12 +70,18 @@
  
       </select>
     </div>
-   <![endif]-->  
-   <div class="PlayButton">
-    <button id="submitBtn" type="button" class="btn btn-default">PLAY</button>
+    <![endif]-->  
+    <div class="PlayButton">
+    	<button id="playBtn" type="button" class="btn btn-default">PLAY</button>
     </div>
-  </form>
 
-  <script src="https://code.jquery.com/jquery.js"></script>
+    	<div class="StatsButton"><button id="statsBtn" type="button" class="btn btn-default">Stats</button></div>
+
+    <div class="help">
+    <button id="helpBtn" type="button" class="btn btn-default">?</button>
+</div>
+</form>
+
+<script src="https://code.jquery.com/jquery.js"></script>
 </body>
 </html>
