removed unecessary stuff from instructor.html

--- a/static/instructor.html
+++ b/static/instructor.html
@@ -23,22 +23,13 @@
         <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
         <!-- p means paragraph -->
         <div class="jumbotron">
-          <h1>Welcome Hunter!</h1>
-          <h2>Student</h2>
+          <h1>Welcome Professor!</h1>
+          <h2>Instructor</h2>
 
           <a href="index.html"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
         </div>
 
-        <!--  this is friend section -->
-        <h4>Friends</h4>
-
-        <div class="Friends" id="project1">
-          <a href="" class="thumbnail">
-            <img src="" alt="Jason" class="img">
-            <img src="" alt="Luis" class="img">
-            <img src="" alt="Xiaoping" class="img">
-          </a>
-        </div>
+    
 
         <!--  this is topic section -->
         <div class="TopicHeader">
